<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/midGreen"
    android:orientation="vertical"
    tools:context=".ui.fragments.HomeFragment">


    <TextView
        android:id="@+id/tvNoInternetConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/noInternetConnectionString"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tvMed1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tvMed1String"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternetConnection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etMed1"/>

    <EditText
        android:id="@+id/etMed1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="medicine"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/etMed1HintString"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvMed1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rgMed1" />

    <RadioGroup
        android:id="@+id/rgMed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/etMed1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvMed2">

        <RadioButton
            android:id="@+id/rB1Med1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:text="@string/rbGenericNameString"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rB2Med1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:text="@string/rbBrandNameString" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvMed2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMed2String"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/rgMed1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etMed2"/>


    <EditText
        android:id="@+id/etMed2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="medicine"
        android:ems="15"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/etMed2hintString"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvMed2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rgMed2" />

    <RadioGroup
        android:id="@+id/rgMed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etMed2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvReaction">

        <RadioButton
            android:id="@+id/rB1Med2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:text="@string/rbGenericNameString"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rB2Med2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:text="@string/rbBrandNameString" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvReaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvReactionString"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/rgMed2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reactionSpinner"/>

    <Spinner
        android:id="@+id/reactionSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvReaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sendQueryBtn"/>


    <Button
        android:id="@+id/sendQueryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendQueryBtnString"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/reactionSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvResults" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sendQueryBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>