<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:foreground="@drawable/custom_ripple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_med"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/ivThumbnail"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:riv_corner_radius="15dp"
        android:src="@drawable/baseline_add_a_photo_24"/>


    <TextView
        android:id="@+id/tvBrandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBrandNameTemplate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        />

    <TextView
        android:id="@+id/tvGenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvGenNameTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"/>

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"/>

    <TextView
        android:id="@+id/tvTimePerDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeIntervalString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="90dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>